# yocto-custom-app

./: CMakeLists.txt  README.md
src/: main.c
